<?xml version="1.0"?>
<package format="3">
  <name>ros2_i2cpwmboard</name>
  <version>0.0.0</version>
  <description>The ros2_i2cpwmboard package</description>
  <maintainer email="winston@example.com">winston</maintainer> <!-- Anpassen -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group> <!-- Hinzufügen -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>