<?xml version="1.0"?>
<package format="3">
  <name>ros2_i2cpwmboard</name>
  <version>0.0.0</version>
  <description>The ros2_i2cpwmboard package</description>
  <maintainer email="winston@example.com">winston</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Node deps -->
  <depend>rclcpp</depend>

  <!-- Message deps -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Generator nur für Build -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- Runtime für generierte Typen -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
