<?xml version="1.0"?>
<package format="3">
  <name>ros2_i2cpwmboard</name>
  <version>0.0.1</version>
  <description>ROS 2 control node and interfaces for an I2C PWM board (e.g., PCA9685).</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Node deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Interface deps -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
