<?xml version="1.0"?>
<package format="3">
  <name>spot_micro_keyboard_cmd</name>
  <version>0.0.0</version>
  <description>The spot_micro_keyboard_cmd package</description>
  <maintainer email="mike@example.com">mike</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
