<?xml version="1.0"?>
<package format="3">
  <name>spot_micro_kinematics</name>
  <version>0.1.0</version>
  <description>Kinematics library for Spot Micro, packaged for ROS 2 (ament_cmake).</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime-/Build-Abhängigkeiten -->
  <depend>Eigen3</depend>

  <!-- Tests (optional) -->
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
