<?xml version="1.0"?>
<package format="3">
  <name>spot_micro_motion_cmd</name>
  <version>0.1.0</version>
  <description>Spot Micro motion command node (ROS 2) using i2c_pwm_board, spot_micro_kinematics and keyboard.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>i2c_pwm_board_msgs</depend>
  <depend>spot_micro_kinematics</depend>
  <depend>Eigen3</depend>

  <exec_depend>i2c_pwm_board</exec_depend>
  <exec_depend>spot_micro_keyboard_cmd</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
